--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "immer": "^10.0.3",
     "jwt-decode": "^4.0.0",
     "moment": "^2.29.4",
-    "next": "13.5.6",
+    "next": "^14.0.3",
     "next-intl": "^3.2.0",
     "notistack": "^3.0.1",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-calendar": "^4.6.1",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^13.5.0",
     "react-material-ui-carousel": "^3.4.2",
@@ -44,12 +44,12 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
     "@types/react-swipeable-views": "^0.13.5",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.6",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8",
     "sass": "^1.69.5",
     "tailwindcss": "^3",
